--- a/style.css
+++ b/style.css
@@ -10,3 +10,68 @@ h2 {
     text-align: center;
     color: aliceblue;
 }
+.timer {
+    text-align: center;
+    color: aliceblue;
+    font-size: xx-large;
+    margin-top: 5%;
+}
+.flexCircle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+.circle {
+    position: relative;
+    width: 600px;
+    height: 600px;
+}
+.circle:before {
+    content: '';
+    position: relative;
+    top: 200px;
+    left: 200px;
+    right: 200px;
+    bottom: 200px;
+    border: 40px solid #fff;
+    border-radius: 50%;
+    box-shadow: 0 0 50px #0f0,
+                inset 0 0 50px #0f0;
+    -webkit-box-reflect: below 10px linear-gradient(transparent,transparent,#0002);
+    animation: animate 5s linear infinite;
+}
+@keyframes animate {
+    0%
+    {
+        box-shadow: 0 0 50px #0f0,
+        inset 0 0 50px #0f0;
+        filter: hue-rotate(0deg);
+    }
+    20%
+    {
+        box-shadow: 0 0 60px #0f0,
+        inset 0 0 60px #0f0;
+    }
+    40%
+    {
+        box-shadow: 0 0 40px #0f0,
+        inset 0 0 40px #0f0;
+    }
+    60%
+    {
+        box-shadow: 0 0 80px #0f0,
+        inset 0 0 80px #0f0;
+    }
+    80%
+    {
+        box-shadow: 0 0 100px #0f0,
+        inset 0 0 100px #0f0;
+    }
+    100%
+    {
+        box-shadow: 0 0 50px #0f0,
+        inset 0 0 50px #0f0;
+        filter: hue-rotate(360deg);
+    }
+}
